--- a/css/login.css
+++ b/css/login.css
@@ -2,7 +2,7 @@
 html, body {
   font: 16px "Open Sans";
   color: #646464;
-  background: #383838;
+  background: #e3e3e3;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -14,10 +14,10 @@ html, body {
 #login{
   padding: 20px; 
   padding-top:20px; 
-  border: 15px solid #B1810B; 
+  border: 0px solid #992c45; 
   width: 280px;
-  border-radius: 30px; 
-  background-color:#000000;
+  border-radius: 5px; 
+  background-color:#435761;
 
 }
 
@@ -67,7 +67,7 @@ fieldset p, fieldset div {
 input {
   padding: 10px;
   border: solid 1px #dcdcdc;
-  border-radius: 15px;
+  border-radius: 5px;
   transition: box-shadow 0.3s, border 0.3s;
 }
 input:focus {
@@ -78,7 +78,7 @@ input:focus {
 
 #enter {
   margin-top: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 5px;
   width: 100%;
   display: block;
