--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,9 @@
 /* line 45, ../sass/screen.scss */
 html, body {
-  font: 16px "Open Sans";
+  font-family: "Open Sans", sans-serif
+  /*font: 16px "Open Sans";*/
   color: #646464;
-  background: #e3e3e3;
+  background: #2c3e50;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -83,8 +84,9 @@ input:focus {
   width: 100%;
   display: block;
   text-decoration: none;
-  color: black;  
+  color: black;
   font-size: 20px;
+  font-weight: bold;
   outline: none;
 }
 
