--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,5 @@
 /* line 45, ../sass/screen.scss */
 html, body {
-  font-family: "Open Sans", sans-serif
-  /*font: 16px "Open Sans";*/
   color: #646464;
   background: #2c3e50;
   width: 100%;
@@ -16,10 +14,19 @@ html, body {
   padding: 20px; 
   padding-top:20px; 
   border: 0px solid #992c45; 
-  width: 280px;
+  width: 340px;
   border-radius: 5px; 
   background-color:#435761;
+}
 
+#signup{
+  display: none;
+  padding: 20px; 
+  padding-top:20px; 
+  border: 0px solid #992c45; 
+  width: 340px;
+  border-radius: 5px; 
+  background-color:#435761;
 }
 
 h2 {
@@ -35,7 +42,7 @@ h2 {
   margin:10px 0;
 }
 
-#login fieldset {
+fieldset {
   margin:0 auto;
   padding:50px 0 10px 0;
   text-align:left;
@@ -77,7 +84,7 @@ input:focus {
     outline: none;
 }
 
-#enter {
+button {
   margin-top: 20px;
   border-radius: 5px;
   padding: 5px;
@@ -90,8 +97,18 @@ input:focus {
   outline: none;
 }
 
+#enterL, #enterS {
+  background-color: #7FFF00;
+  border-color: #7FFF00;
+}
+#showSignup, #showLogin {
+  background-color: #FF4500;
+  border-color: #FF4500;
+}
+
+
 #loginFeedback {
-  color: red;
+  color: #800040;
   display block
   padding: 5;
 }
