--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,11 @@
     display: none;
 }
 
-.add-class-button {
-    float: right;
-    padding: 0px;
-}
-
-.assignment-btn-div {
+.assignment-class-btn-div {
     float: right;
 }
 
-.assignment-btns {
+.assignment-class-btns {
     background-color: Transparent;
     /*background-repeat:no-repeat;*/
     border: none;
