Alignments and Welcome message

--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,19 @@
 	width: 90%;
 	overflow: hidden;
 }
+
+.w3-opacity {
+	text-align: center;
+}
+
+.welcome {
+	text-align: center;
+}
+
+.footer {
+	position: absolute;
+    left: 0;
+    bottom: 0;
+    /*height: 100px;*/
+    width: 100%;
+}
