Fix hiding of assignments under footer

--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,13 @@
 }
 
 .footer {
-	position: absolute;
+	position: fixed;
     left: 0;
     bottom: 0;
     /*height: 100px;*/
     width: 100%;
+}
+
+#div-that-needs-lower-margin {
+    margin-bottom: 100px;
 }
