--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .strikethrough {
-    text-decoration: line-through;
+    text-decoration: line-through !important;
 }
 .assignment-class-btn-div {
     float: right;
@@ -101,4 +101,8 @@
 
 .assignment-item {
     border-bottom: 1px solid black;
+}
+
+.class-focusable:focus {
+    background: purple;
 }
