--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 .strikethrough {
     text-decoration: line-through !important;
+    color:green;
 }
 .assignment-class-btn-div {
     float: right;
