--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@
 }
 
 .ass-desc {
-
+    float:left;
 }
 
 .assignment-individual-div {
@@ -102,8 +102,4 @@
 
 .assignment-item {
     border-bottom: 1px solid black;
-}
-
-.class-focusable:focus {
-    background: purple;
 }
