--- a/css/login.css
+++ b/css/login.css
@@ -17,6 +17,10 @@ html, body {
   width: 340px;
   border-radius: 5px; 
   background-color:#435761;
+  background-image: url("../images/OnTymeLogo.png");
+  background-size: 150px 150px;
+  background-position: center top;
+  background-repeat: no-repeat;
 }
 
 #signup{
@@ -27,6 +31,10 @@ html, body {
   width: 340px;
   border-radius: 5px; 
   background-color:#435761;
+  background-image: url("../images/OnTymeLogo.png");
+  background-size: 150px 150px;
+  background-position: center top;
+  background-repeat: no-repeat;
 }
 
 h2 {
